--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
-    "build": "tsc",
+    "build": "npx prisma generate && tsc",
     "start": "node dist/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -26,15 +26,15 @@
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
     "pg": "^8.16.3",
+    "prisma": "^7.1.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.3",
+    "ws": "^8.18.3",
     "zod": "^4.1.13"
   },
   "devDependencies": {
     "@types/node": "^25.0.2",
     "@types/pg": "^8.16.0",
-    "@types/ws": "^8.18.1",
-    "prisma": "^7.1.0",
-    "ws": "^8.18.3"
+    "@types/ws": "^8.18.1"
   }
 }
